5.26 cleaned the code
