# src/main/java/com/example/demo/controller/EditorController.java
@@ -1,41 +1,28 @@
 package com.example.demo.controller;
 
-import java.util.Map;
 import java.util.Date;
 
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.origin.SystemEnvironmentOrigin;
-import org.springframework.jdbc.object.BatchSqlUpdate;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Controller;
-
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.servlet.ModelAndView;
-import org.thymeleaf.expression.Arrays;
 
 import com.example.demo.model.BlogInfo;
-import com.example.demo.model.UserInfo;
 import com.example.demo.repository.BlogInfoRepository;
-import com.example.demo.repository.UserInfoRepository;
-
-import lombok.experimental.var;
-import lombok.extern.slf4j.Slf4j;
 
 @Controller
-@Slf4j
 public class EditorController {
 
-	@Autowired
-	private UserInfoRepository userInfoRepository;
 	@Autowired
 	private BlogInfoRepository blogInfoRepository;
 
 	@GetMapping("/home")
 	public ModelAndView backHome(//
 			ModelAndView mv) { 
-																													// page
+
 		mv.addObject("blogList", blogInfoRepository.findAll());
 		mv.setViewName("home");
 		return mv;
@@ -57,6 +44,8 @@ public class EditorController {
 				.build();//
 
 		blogInfoRepository.save(blogInfo);
+		
+		mv.addObject("isAuthorized",true);
 		
 		mv.addObject("theBlogAuthor", blogInfo.getName());
 		mv.addObject("theBlogId", blogInfo.getId());
@@ -91,7 +80,7 @@ public class EditorController {
 		mv.addObject("theBlogViews", blogInfo.getViews());
 		mv.addObject("theBlogId", blogId);
 		mv.addObject("theBlogTitle", blogTitle);
-		mv.addObject("theBlogContent", blogContent); // replaceAll("\n", "<br />")
+		mv.addObject("theBlogContent", blogContent);
 		mv.setViewName("reader");
 
 		return mv;
